[package]
name = "pixvert_rs"
version = "0.1.0"
authors = ["Łukasz Sitarski <lucassith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
actix-web = "3"
async-trait = "0.1.50"
bytes = "1.0.1"
actix-rt = "2.2"