[package]
name = "pixvert_rs"
version = "0.1.0"
authors = ["Łukasz Sitarski <lucassith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
actix-web = "4.0.0-beta.8"
async-trait = "0.1.50"
bytes = "1.0.1"
actix-rt = "2.2"
mime = "0.3.16"
log = "0.4.14"
log4rs = "1.0.0"
image = "0.23.14"
webp = "0.1.3"
urlencoding = "2.1.0"
md5 = "0.7.0"

[dev-dependencies]
httpmock = "0.5.8"