[package]
name = "pixvert_rs"
version = "1.0.0"
authors = ["Łukasz Sitarski <lucassith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
actix-web = "4.0.0-beta.10"
bincode = "1.3.3"
bytes = "1.1.0"
actix-rt = "2.3.0"
cache_control = "0.2.0"
mime = "0.3.16"
log = "0.4.14"
log4rs = "1.0.0"
image_crate = { package = "image", version = "0.24.1" }
chrono = "0.4.19"
webp = "0.2.2"
urlencoding = "2.1.0"
url = "2.2.2"
md5 = "0.7.0"
jpegxl-rs = "0.6.1"
rand = "0.8.4"
uuid = { version = "0.8.2",  default-features = false, features = ["v4"] }
tempfile = "3.2.0"
serde = "1.0.130"
serde_bytes = "0.11.5"
serde_yaml = "0.8.21"
figment = { version = "0.10.6", features = ["yaml", "env"] }

[dev-dependencies]
httpmock = "0.6.2"
